EO-23 Load more when user scrolls to the end of the list

--- a/app/src/main/res/layout/list_item_grid_product.xml
+++ b/app/src/main/res/layout/list_item_grid_product.xml
@@ -6,8 +6,7 @@
     android:id="@+id/card_view_grid"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:clickable="true"
-    android:foreground="?attr/selectableItemBackground"
+    android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
     app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="0dp"
@@ -29,7 +28,8 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="10dp"
-            android:src="@drawable/ic_pwb_logo_detail" />
+            android:src="@drawable/ic_pwb_logo_detail"
+            android:contentDescription="@string/product_detail" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,15 +47,16 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
-                android:gravity="left"
+                android:gravity="start"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:layout_marginLeft="5dp"
                 android:textColor="@color/nameProductColor"
                 style="@style/textNameProduct"
                 android:padding="5dp"
+                android:text="@string/brand"
                 app:typeFaceAsset="RobotoLight.ttf"
-                tools:text="APPLE" />
+                tools:text="@string/brand" />
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 android:id="@+id/txt_product_name"
@@ -64,7 +65,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
-                android:gravity="left"
+                android:gravity="start"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:layout_marginLeft="5dp"
@@ -82,11 +83,11 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
-                android:gravity="left"
+                android:gravity="start"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:layout_marginLeft="5dp"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textColor="@color/nameProductColor"
                 android:textStyle="normal"
                 android:padding="5dp"
@@ -106,11 +107,13 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
                     android:layout_marginRight="2dp"
+                    android:layout_marginEnd="2dp"
                     android:layout_marginLeft="10dp"
-                    android:gravity="left"
+                    android:layout_marginStart="10dp"
+                    android:gravity="start"
                     android:maxLines="1"
                     android:padding="5dp"
-                    android:textSize="14dp"
+                    android:textSize="14sp"
                     android:textColor="@color/nameProductColor"
                     app:typeFaceAsset="RobotoLight.ttf"
                     tools:text="16,800"/>
@@ -121,12 +124,14 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
                     android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"
                     android:layout_marginLeft="2dp"
-                    android:gravity="right"
+                    android:layout_marginStart="2dp"
+                    android:gravity="end"
                     android:maxLines="1"
                     android:padding="5dp"
                     android:textColor="@color/salePriceColor"
-                    android:textSize="14dp"
+                    android:textSize="14sp"
                     android:textStyle="bold"
                     app:typeFaceAsset="RobotoLight.ttf"
                     tools:text="12,600"/>
