--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,6 +10,8 @@
     <RelativeLayout
         android:id="@+id/layout_filter"
         android:layout_width="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/layout_category"
         android:layout_height="48dp">
 
         <LinearLayout
@@ -17,17 +19,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/img_icon"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:src="@drawable/ic_arrow_back"/>
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
@@ -35,8 +37,8 @@
                 style="@style/textNameCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:ellipsize="end"
                 android:textStyle="bold"
                 tool:text="Category"/>
@@ -48,9 +50,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
             android:orientation="horizontal">
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
@@ -58,9 +60,8 @@
                 style="@style/textSize18Sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
                 android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
                 android:ellipsize="end"
                 android:text="Product"
                 android:textStyle="bold"/>
@@ -68,9 +69,10 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_centerVertical="true"
                 android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:src="@drawable/ic_keyboard_arrow_down"/>
 
         </LinearLayout>
@@ -78,7 +80,10 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/layout_category"
         android:layout_width="match_parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_filter"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_view_list"
         android:layout_height="48dp">
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
@@ -88,6 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:ellipsize="end"
             android:textStyle="bold"
             tool:text="Category"/>
@@ -97,9 +103,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
             android:orientation="horizontal">
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
@@ -107,9 +113,8 @@
                 style="@style/textSize18Sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
                 android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
                 android:ellipsize="end"
                 android:text="Sort"
                 android:textStyle="bold"/>
@@ -117,9 +122,10 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_centerVertical="true"
                 android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:src="@drawable/ic_sort"/>
 
         </LinearLayout>
@@ -138,9 +144,33 @@
         <!--</android.support.v7.widget.RecyclerView>-->
         <com.github.ksoichiro.android.observablescrollview.ObservableRecyclerView
             android:id="@+id/recycler_view_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layout_category"
+            app:layout_constraintBottom_toTopOf="@id/layout_progress"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
     <!--</FrameLayout>-->
-</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_progress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/hintColor"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_view_list"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:alpha="0.4"
+        android:gravity="center_horizontal"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:padding="6dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
+
+    </LinearLayout>
+
+</android.support.constraint.ConstraintLayout>
