--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -159,17 +159,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/hintColor"
+        android:background="@color/lightgray02"
         app:layout_constraintTop_toBottomOf="@+id/recycler_view_list"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:alpha="0.4"
-        android:gravity="center_horizontal"
-        android:visibility="gone">
+        android:gravity="center">
 
         <ProgressBar
             android:padding="6dp"
             android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_height="40dp"/>
+
+        <cenergy.central.com.pwb_store.view.PowerBuyTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/loading"
+            android:layout_marginStart="6dp"
+            android:layout_marginLeft="6dp"
+            style="@style/textNameProduct"
+            android:textColor="@color/powerBuyWhite"
+            android:textSize="16sp"/>
 
     </LinearLayout>
 
