--- a/app/src/main/res/layout/list_item_category.xml
+++ b/app/src/main/res/layout/list_item_category.xml
@@ -30,6 +30,7 @@
                 android:layout_height="122dp"
                 android:layout_marginBottom="12dp"
                 tools:src="@mipmap/ic_launcher"/>
+                android:background="@drawable/category_circle"
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 android:id="@+id/txt_view"
