--- a/app/src/main/res/layout/activity_sub_header_product.xml
+++ b/app/src/main/res/layout/activity_sub_header_product.xml
@@ -73,10 +73,11 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/sub_header_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sub_header_title_text" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
