EO-2 Create view for "Checkout - Click & Reserve" task

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -13,4 +13,8 @@
     <declare-styleable name="PowerBuyIncreaseOrDecreaseView">
         <attr name="qty"/>
     </declare-styleable>
+    <declare-styleable name="PowerBuyEditTextBorder">
+        <attr name="header" format="string"/>
+        <attr name="required" format="boolean"/>
+    </declare-styleable>
 </resources>
