--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -42,6 +42,8 @@
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
+        android:paddingRight="16dp"
+        android:paddingLeft="16dp"
         app:layout_constraintBottom_toTopOf="@id/layout_total_shopping_cart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -154,7 +156,7 @@
                     style="@style/RaisedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/product_compare"
+                    android:text="@string/payment_header"
                     android:textColor="@android:color/white"
                     android:textSize="14sp"
                     app:typeFaceAsset="RobotoLight.ttf" />
