--- a/app/src/main/res/layout/list_item_shopping_cart.xml
+++ b/app/src/main/res/layout/list_item_shopping_cart.xml
@@ -34,6 +34,7 @@
                 android:weightSum="1">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/product_name_list_shopping_cart"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -66,7 +67,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:text="qty" />
+                    android:text="@string/qty" />
 
                 <cenergy.central.com.pwb_store.view.PowerBuyIncreaseOrDecreaseView
                     android:layout_width="wrap_content"
