--- a/app/src/main/res/layout/fragment_payment_description.xml
+++ b/app/src/main/res/layout/fragment_payment_description.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -242,69 +242,68 @@
 
             </LinearLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginBottom="16dp"
-                android:layout_marginTop="16dp"
-                android:background="@color/graySelect" />
+        </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_product_list_payment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:overScrollMode="never" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/graySelect" />
 
-            <LinearLayout
-                android:id="@+id/layout_total_shopping_cart"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_product_list_payment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp" />
+
+        <LinearLayout
+            android:id="@+id/layout_total_shopping_cart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginRight="6dp"
+            android:orientation="horizontal">
+
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                style="@style/textNameProduct"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="6dp"
-                android:layout_marginRight="6dp"
-                android:orientation="horizontal">
+                android:textSize="14sp"
+                tools:text="Total :" />
 
-                <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                    style="@style/textNameProduct"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    tools:text="Total :" />
-
-                <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                    style="@style/textNameProduct"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="18dp"
-                    android:layout_marginStart="18dp"
-                    android:textSize="18sp"
-                    tools:text="4,404" />
-            </LinearLayout>
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/payment_button_payment"
-                style="@style/RaisedButtonCard"
-                android:layout_width="match_parent"
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                style="@style/textNameProduct"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:foreground="?android:attr/selectableItemBackground"
-                app:cardBackgroundColor="@color/colorPrimary">
-
-                <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                    style="@style/RaisedButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/payment_header"
-                    android:textColor="@android:color/white"
-                    android:textSize="14sp"
-                    app:typeFaceAsset="RobotoLight.ttf" />
-
-            </android.support.v7.widget.CardView>
-
+                android:layout_marginLeft="18dp"
+                android:layout_marginStart="18dp"
+                android:textSize="18sp"
+                tools:text="4,404" />
         </LinearLayout>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/payment_button_payment"
+            style="@style/RaisedButtonCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@color/colorPrimary">
+
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                style="@style/RaisedButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/payment_header"
+                android:textColor="@android:color/white"
+                android:textSize="14sp"
+                app:typeFaceAsset="RobotoLight.ttf" />
+
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
-</ScrollView>
+</android.support.v4.widget.NestedScrollView>
