--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,9 +26,9 @@
                 <ImageView
                     android:layout_width="120dp"
                     android:layout_height="120dp"
-                    android:padding="20dp"
                     android:background="@drawable/green_circle"
                     android:contentDescription="@string/app_name"
+                    android:padding="20dp"
                     android:src="@drawable/ic_check" />
 
                 <LinearLayout
@@ -40,14 +41,14 @@
                     <cenergy.central.com.pwb_store.view.PowerBuyTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="32sp"
-                        android:text="@string/success" />
+                        android:text="@string/success"
+                        android:textSize="32sp" />
 
                     <cenergy.central.com.pwb_store.view.PowerBuyTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="24sp"
-                        android:text="@string/order_number" />
+                        android:text="@string/order_number"
+                        android:textSize="20sp" />
 
                 </LinearLayout>
 
@@ -58,16 +59,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="16dp"
+            android:orientation="vertical"
             android:paddingEnd="16dp"
-            android:orientation="vertical">
+            android:paddingStart="16dp">
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 style="@style/textPaymentHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/order_detail" />
 
             <LinearLayout
@@ -107,20 +108,21 @@
                 android:background="@color/graySelect" />
 
             <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view_order_detail_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"/>
+                android:overScrollMode="never" />
 
             <LinearLayout
                 android:id="@+id/layout_total_shopping_cart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:background="@color/lightgray"
+                android:gravity="end"
+                android:orientation="horizontal"
                 android:paddingEnd="16dp"
                 android:paddingRight="16dp"
-                android:layout_marginBottom="12dp"
-                android:gravity="end"
-                android:background="@color/lightgray"
-                android:orientation="horizontal"
                 tools:ignore="RtlSymmetry">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
@@ -149,27 +151,189 @@
                 style="@style/textPaymentHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/personal_detail" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:orientation="horizontal">
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/order_date"
+                    tools:ignore="NestedWeights" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:orientation="horizontal">
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/customer_name"
+                    tools:ignore="NestedWeights" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:orientation="horizontal">
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/email"
+                    tools:ignore="NestedWeights" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:orientation="horizontal">
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/tell"
+                    tools:ignore="NestedWeights" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8" />
+
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
+                android:layout_marginTop="16dp"
                 android:background="@color/graySelect" />
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 style="@style/textPaymentHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/store_collection_detail" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:orientation="horizontal">
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/branch"
+                    tools:ignore="NestedWeights" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:orientation="horizontal">
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/address"
+                    tools:ignore="NestedWeights" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:orientation="horizontal">
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/phone"
+                    tools:ignore="NestedWeights" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:orientation="horizontal">
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/open_today"
+                    tools:ignore="NestedWeights" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8" />
+
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
                 android:background="@color/graySelect" />
 
             <android.support.v7.widget.CardView
