--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -44,6 +44,41 @@
                 tool:text="Category"/>
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/layout_brand"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@+id/layout_product"
+            android:layout_toLeftOf="@+id/layout_product"
+            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_centerVertical="true"
+            android:background="?android:attr/selectableItemBackground"
+            android:orientation="horizontal"
+            tool:ignore="RelativeOverlap">
+
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                android:id="@+id/txt_brand_filter"
+                style="@style/textSize18Sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
+                android:ellipsize="end"
+                android:text="@string/brand"
+                android:textStyle="bold"/>
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/ic_keyboard_arrow_down"
+                android:contentDescription="@string/app_name" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/layout_product"
