EO-9 Created FilterByBrandAdapter and FilterByBrandViewHolder for show brand list

--- a/app/src/main/res/layout/list_item_product_filter_header.xml
+++ b/app/src/main/res/layout/list_item_product_filter_header.xml
@@ -7,15 +7,15 @@
     android:layout_width="350dp"
     android:layout_height="wrap_content"
     android:background="@color/powerBuyWhite"
-    android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/img_fill_back"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginLeft="3dp"
-        android:layout_gravity="start|center_vertical"/>
+        android:layout_marginStart="3dp"
+        android:layout_gravity="start|center_vertical"
+        android:contentDescription="@string/app_name" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/txt_header_filter"
@@ -24,8 +24,8 @@
         android:layout_gravity="center_vertical"
         android:ellipsize="end"
         android:padding="10dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="10dp"
         style="@style/textFilterHead"
         app:typeFaceAsset="RobotoLight.ttf"
         tools:text="Categories"/>
@@ -34,7 +34,8 @@
         android:id="@+id/img_filter_header"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginRight="3dp"
-        android:layout_gravity="end|center"/>
+        android:layout_marginEnd="3dp"
+        android:layout_gravity="end|center"
+        android:contentDescription="@string/app_name" />
 
 </FrameLayout>
