--- a/app/src/main/res/layout/list_item_product_detail_description.xml
+++ b/app/src/main/res/layout/list_item_product_detail_description.xml
@@ -214,7 +214,7 @@
         </cenergy.central.com.pwb_store.view.PowerBuyWrapAbleGridView>
 
         <android.support.v7.widget.CardView
-            android:id="@+id/card_view_cart"
+            android:id="@+id/card_view_add_to_cart"
             style="@style/RaisedButtonCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
