--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -99,7 +99,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1.5"
-                    android:text="@string/total_price" />
+                    android:text="@string/total" />
             </LinearLayout>
 
             <View
@@ -130,7 +130,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
-                    tools:text="Total :" />
+                    android:text="@string/total_price" />
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
                     style="@style/textPaymentHeader"
