--- a/app/src/main/res/layout/list_item_shopping_cart.xml
+++ b/app/src/main/res/layout/list_item_shopping_cart.xml
@@ -30,7 +30,7 @@
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 android:id="@+id/product_name_list_shopping_cart"
                 style="@style/descriptionProduct"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 tools:text="Product Name" />
@@ -92,7 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@+id/layout_shopping_cart"
         android:contentDescription="@string/product_detail"
         android:src="@drawable/ic_cancel" />
 
