--- a/app/src/main/res/layout/fragment_payment_description.xml
+++ b/app/src/main/res/layout/fragment_payment_description.xml
@@ -109,10 +109,20 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                style="@style/textPaymentHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:ellipsize="end"
+                android:text="@string/billing_address"
+                app:typeFaceAsset="RobotoLight.ttf" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginTop="16dp"
                 android:weightSum="2">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
