--- a/app/src/main/res/layout/view_increase_or_decrease_qty.xml
+++ b/app/src/main/res/layout/view_increase_or_decrease_qty.xml
@@ -22,12 +22,15 @@
             android:layout_height="match_parent"
             android:background="@color/graySelect" />
 
-        <ImageView
-            android:id="@+id/remove"
+        <ImageButton
+            android:id="@+id/removeButton"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_margin="0dp"
+            android:background="@color/powerBuyWhite"
             android:contentDescription="@string/app_name"
-            android:padding="3dp"
+            android:padding="0dp"
             android:src="@drawable/ic_remove" />
 
         <View
@@ -38,10 +41,11 @@
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/qty"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center"
             android:paddingLeft="24dp"
+            android:layout_margin="0dp"
             android:paddingRight="24dp"
             android:textSize="18sp"
             tools:ignore="NestedWeights" />
@@ -51,12 +55,14 @@
             android:layout_height="match_parent"
             android:background="@color/graySelect" />
 
-        <ImageView
-            android:id="@+id/add"
+        <ImageButton
+            android:id="@+id/addButton"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:background="@color/powerBuyWhite"
             android:contentDescription="@string/app_name"
-            android:padding="3dp"
+            android:padding="0dp"
             android:src="@drawable/ic_add" />
 
         <View
