--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="graySelect">#909090</color>
     <color name="blackText">#000000</color>
     <color name="divider">#FFECECEC</color>
+    <color name="disableButton">#f2f2f2</color>
 
     <color name="lightgray">#e7e7e7</color>
     <color name="lightgray02">#bfbfbf</color>
